--- a/TP5/Project1/Project1.vcxproj
+++ b/TP5/Project1/Project1.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4cf8e80e-7d1e-4a60-a01e-3323c5c4b8f6}</ProjectGuid>
-    <RootNamespace>EXO1</RootNamespace>
+    <ProjectGuid>{b45d9643-9a09-48a3-85ad-20d5e59b9e78}</ProjectGuid>
+    <RootNamespace>Project1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>tp5 exo1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,9 +140,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="EXO1.c" />
+    <ClCompile Include="main.c" />
     <ClCompile Include="tab.c" />
-    <ClCompile Include="tab.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tab.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
